--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,18 @@
           <target>1.7</target>
         </configuration>
       </plugin>
-    
+      <plugin>
+
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.12</version>
+        <inherited>true</inherited>
+        <configuration>
+          <suiteXmlFiles>
+          <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
     </plugins>    
          
       <pluginManagement>
