--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,21 @@
             <artifactId>maven-war-plugin</artifactId>
             <version>2.4</version>
           </plugin>
+          
+          
+            <plugin>
+
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.12</version>
+        <inherited>true</inherited>
+        <configuration>
+          <suiteXmlFiles>
+          <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+          
         </plugins>
       </pluginManagement>  
     
